--- a/resource-management/resource-management-dao/src/main/resources/application-dev.properties
+++ b/resource-management/resource-management-dao/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/itgura
-spring.datasource.username= root
+spring.datasource.username= postgres
 spring.datasource.password=  1234
 spring.datasource.hikari.schema=resource_management
 spring.datasource.driver-class-name=org.postgresql.Driver
