api gateway & eureka server added

--- a/dms-mediator/dms-mediator-all/src/main/resources/application.properties
+++ b/dms-mediator/dms-mediator-all/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8099
+spring.application.name=dms-mediator
 #logging.level.org.springframework.core.env=DEBUG
 spring.profiles.active=stg
+
+
