--- a/dms-mediator/dms-mediator-dao/src/main/resources/application-stg.properties
+++ b/dms-mediator/dms-mediator-dao/src/main/resources/application-stg.properties
@@ -12,4 +12,20 @@ alfresco.uploadRelativePath=/dms
 
 #alfresco.base.url=http://192.168.1.87:8080/alfresco
 
+#eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.instance.prefer-ip-address=true
+
+#swagger
+#server.servlet.context-path=/
+#
+#openapi.service.title=Document Mediator
+#openapi.service.version=1.0
+#openapi.service.url=http://localhost:8081
+#springdoc.api-docs.path=dms-mediator/v3/api-docs
+#springdoc.swagger-ui.path=dms-mediator/swagger-ui.html
+
+
 
