--- a/resource-management/resource-management-all/src/main/resources/application.properties
+++ b/resource-management/resource-management-all/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8092
+spring.application.name=resource-management
 logging.level.org.springframework.core.env=DEBUG
 spring.profiles.active=dev
