--- a/resource-management/resource-management-dao/src/main/resources/application-dev.properties
+++ b/resource-management/resource-management-dao/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/itgura
 spring.datasource.username= postgres
-spring.datasource.password=  1234
+spring.datasource.password=  root
 spring.datasource.hikari.schema=resource_management
 spring.datasource.driver-class-name=org.postgresql.Driver
 
@@ -24,3 +24,8 @@ spring.datasource.hikari.maximum-pool-size=10000
 spring.datasource.hikari.minimum-idle= 10
 spring.datasource.hikari.idle-timeout= 120000
 spring.datasource.hikari.connectionTimeout= 5000
+
+#eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
