--- a/lms-gateway/src/main/resources/application.properties
+++ b/lms-gateway/src/main/resources/application.properties
@@ -29,12 +29,15 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 #resource-management--not setup yet
 spring.cloud.gateway.routes[0].id:resource-management
 spring.cloud.gateway.routes[0].uri:lb://resource-management
-spring.cloud.gateway.routes[0].predicates[0].name:Path
+spring.cloud.gateway.routes[0].predicates[0].name=Path
 spring.cloud.gateway.routes[0].predicates[0].args.pattern=/resource-management/**
 
-spring.cloud.gateway.routes[0].filters[0].name=RewritePath
-spring.cloud.gateway.routes[0].filters[0].args.regexp=/resource-management/(?<remaining>.*)
-spring.cloud.gateway.routes[0].filters[0].args.replacement=/api/v1/resource-management/${remaining}
+
+spring.cloud.gateway.routes[0].filters[1].name=RewritePath
+spring.cloud.gateway.routes[0].filters[1].args.regexp=/resource-management/(?<remaining>.*)
+spring.cloud.gateway.routes[0].filters[1].args.replacement=/api/v1/resource-management/${remaining}
+
+spring.cloud.gateway.routes[0].filters[0].name=AuthenticationFilter
 
 #dms-mediator
 spring.cloud.gateway.routes[1].id=dms-mediator
@@ -42,9 +45,24 @@ spring.cloud.gateway.routes[1].uri=lb://dms-mediator
 spring.cloud.gateway.routes[1].predicates[0].name=Path
 spring.cloud.gateway.routes[1].predicates[0].args.pattern=/dms-mediator/**
 
-spring.cloud.gateway.routes[1].filters[0].name=RewritePath
-spring.cloud.gateway.routes[1].filters[0].args.regexp=/dms-mediator/(?<remaining>.*)
-spring.cloud.gateway.routes[1].filters[0].args.replacement=/api/v1/dms-mediator/${remaining}
+spring.cloud.gateway.routes[1].filters[1].name=RewritePath
+spring.cloud.gateway.routes[1].filters[1].args.regexp=/dms-mediator/(?<remaining>.*)
+spring.cloud.gateway.routes[1].filters[1].args.replacement=/api/v1/dms-mediator/${remaining}
+
+spring.cloud.gateway.routes[1].filters[0].name=AuthenticationFilter
+
+#auth-service
+spring.cloud.gateway.routes[2].id=auth-service
+spring.cloud.gateway.routes[2].uri=lb://auth-service
+spring.cloud.gateway.routes[2].predicates[0].name=Path
+spring.cloud.gateway.routes[2].predicates[0].args.pattern=/auth-service/**
+
+
+spring.cloud.gateway.routes[2].filters[0].name=RewritePath
+spring.cloud.gateway.routes[2].filters[0].args.regexp=/auth-service/(?<remaining>.*)
+spring.cloud.gateway.routes[2].filters[0].args.replacement=/api/v1/auth-service/${remaining}
+
+
 
 
 
