--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=auth-service
 server.port=8098
 
 #datasource configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/itgura
-spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://dpg-cp2qofi1hbls738314e0-a.oregon-postgres.render.com:5432/it_gura
+spring.datasource.username= it_gura_user
+spring.datasource.password=  lsbflvJ0HfdVIgbHNbCEZnzV3o9SAErn
 spring.datasource.hikari.schema=auth_service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
