--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ auth-service/mvnw
 auth-service/mvnw.cmd
 resource-management/resource-management-all/target/resource-management-all-1.0.0.jar.original
 *.lst
+*.jar
