--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -89,7 +89,11 @@
 			<artifactId>lib-global</artifactId>
 			<version>0.0.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
