--- a/lib-common/pom.xml
+++ b/lib-common/pom.xml
@@ -90,6 +90,12 @@
             <artifactId>spring-cloud-openfeign-core</artifactId>
             <version>2.1.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.12.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
