--- a/resource-management/resource-management-all/src/main/resources/application.properties
+++ b/resource-management/resource-management-all/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=resource-management
 logging.level.org.springframework.core.env=DEBUG
 spring.profiles.active=dev
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+logging.level.org.springframework.security=DEBUG
