--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 
 
 #datasource configuration
-spring.datasource.url=jdbc:postgresql://dpg-cp2qofi1hbls738314e0-a.oregon-postgres.render.com:5432/it_gura
-spring.datasource.username= it_gura_user
-spring.datasource.password=  lsbflvJ0HfdVIgbHNbCEZnzV3o9SAErn
+spring.datasource.url=jdbc:postgresql://localhost:5432/itgura
+spring.datasource.username=postgres
+spring.datasource.password=1234
 spring.datasource.hikari.schema=payment_service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
