--- a/resource-management/resource-management-dao/src/main/resources/application-prod.properties
+++ b/resource-management/resource-management-dao/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=jdbc:postgresql://dpg-cp2qofi1hbls738314e0-a.oregon-postgres.render.com:5432/it_gura
-spring.datasource.username= it_gura_user
+spring.datasource.url=jdbc:postgresql://dpg-cp2qofi1hbls738314e0-a.oregon-postgres.render.com:5432/itgura
+spring.datasource.username= postgres
 spring.datasource.password=  lsbflvJ0HfdVIgbHNbCEZnzV3o9SAErn
 spring.datasource.hikari.schema=resource_management
 spring.datasource.driver-class-name=org.postgresql.Driver
