--- a/user-management/user-management-dao/src/main/resources/application-prod.properties
+++ b/user-management/user-management-dao/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://dpg-cp2qofi1hbls738314e0-a.oregon-postgres.render.com:5432/it_gura
+spring.datasource.url=jdbc:postgresql://dpg-cp2qofi1hbls738314e0-a.oregon-postgres.render.com:5432/itgura
 spring.datasource.username= it_gura_user
 spring.datasource.password=  lsbflvJ0HfdVIgbHNbCEZnzV3o9SAErn
 spring.datasource.hikari.schema=resource_management
