--- a/lms-gateway/pom.xml
+++ b/lms-gateway/pom.xml
@@ -3,12 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>com.itgura.lms</groupId>
+		<artifactId>lms</artifactId>
+		<version>1.0.0</version>
+
 	</parent>
-	<groupId>com.itgura</groupId>
+	<packaging>jar</packaging>
+
 	<artifactId>lms-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>lms-gateway</name>
@@ -17,6 +18,28 @@
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
 	</properties>
+
+	<profiles>
+		<profile>
+			<id>build-docker-image</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.google.cloud.tools</groupId>
+						<artifactId>jib-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>build</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -60,6 +83,11 @@
 			<artifactId>jjwt-jackson</artifactId>
 			<version>0.12.5</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.cloud</groupId>-->
+<!--			<artifactId>spring-cloud-starter-kubernetes</artifactId>-->
+<!--			<version>1.1.10.RELEASE</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 	<dependencyManagement>
