--- a/resource-management/resource-management-service/pom.xml
+++ b/resource-management/resource-management-service/pom.xml
@@ -8,8 +8,8 @@
         <artifactId>resource-management</artifactId>
         <version>1.0.0</version>
     </parent>
+    <packaging>jar</packaging>
 
-    <groupId>com.itgura.lms</groupId>
     <artifactId>resource-management-service</artifactId>
     <dependencies>
         <dependency>
@@ -21,8 +21,7 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
