--- a/dms-mediator/dms-mediator-all/pom.xml
+++ b/dms-mediator/dms-mediator-all/pom.xml
@@ -6,7 +6,30 @@
         <groupId>com.itgura.lms</groupId>
         <version>1.0.0</version>
     </parent>
+    <packaging>jar</packaging>
     <artifactId>dms-mediator-all</artifactId>
+
+    <profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
@@ -21,6 +44,7 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
