--- a/dms-mediator/dms-mediator-service/pom.xml
+++ b/dms-mediator/dms-mediator-service/pom.xml
@@ -7,6 +7,7 @@
         <artifactId>dms-mediator</artifactId>
         <version>1.0.0</version>
     </parent>
+    <packaging>jar</packaging>
     <artifactId>dms-mediator-service</artifactId>
 
     <dependencies>
@@ -28,7 +29,23 @@
         </dependency>
     </dependencies>
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>jib-execution</id>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
