--- a/dms-mediator/pom.xml
+++ b/dms-mediator/pom.xml
@@ -4,29 +4,30 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.itgura.lms</groupId>
+        <artifactId>lms</artifactId>
+        <version>1.0.0</version>
+
     </parent>
-    <groupId>com.itgura.lms</groupId>
+
+
     <artifactId>dms-mediator</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0</version>
-
-
-
-
     <modules>
         <module>dms-mediator-all</module>
         <module>dms-mediator-dao</module>
         <module>dms-mediator-service</module>
     </modules>
+    <version>1.0.0</version>
+
+
+
+
+
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <spring-cloud.version>2022.0.5</spring-cloud.version>
+        <java.version>17</java.version>
+        <spring-cloud.version>2023.0.1</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -34,7 +35,15 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-kubernetes</artifactId>-->
+<!--            <version>1.1.10.RELEASE</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <dependencyManagement>
@@ -48,4 +57,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
