--- a/lib-common/pom.xml
+++ b/lib-common/pom.xml
@@ -5,19 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.itgura.lms</groupId>
+        <artifactId>lms</artifactId>
+        <version>1.0.0</version>
+
     </parent>
 
-    <groupId>com.itgura.lms</groupId>
+
+
     <artifactId>lib-common</artifactId>
+    <packaging>jar</packaging>
     <version>0.0.1</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -25,8 +26,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <scope>runtime</scope>
-            <optional>true</optional>
+            <version>3.3.1</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
