--- a/resource-management/resource-management-all/pom.xml
+++ b/resource-management/resource-management-all/pom.xml
@@ -9,8 +9,29 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>com.itgura.lms</groupId>
+    <packaging>jar</packaging>
     <artifactId>resource-management-all</artifactId>
+    <profiles>
+        <profile>
+            <id>build-docker-image</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <dependencies>
         <dependency>
             <groupId>com.itgura.lms</groupId>
@@ -28,6 +49,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -36,5 +58,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
