--- a/resource-management/resource-management-dao/pom.xml
+++ b/resource-management/resource-management-dao/pom.xml
@@ -9,12 +9,11 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>com.itgura.lms</groupId>
+    <packaging>jar</packaging>
     <artifactId>resource-management-dao</artifactId>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
