--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,50 +118,50 @@ services:
     networks:
       - spring
 
-  alfresco:
-    container_name: alfresco
-    image: alfresco/alfresco-content-repository-community:latest
-    environment:
-      JAVA_OPTS: "
-        -Ddb.driver=org.postgresql.Driver
-        -Ddb.username=postgres
-        -Ddb.password=root
-        -Ddb.url=jdbc:postgresql://postgres-main/alfresco
-        -Dsolr.host=solr6
-        -Dsolr.port=8983
-        -Dsolr.secureComms=none
-        -Dsolr.base.url=/solr
-        -Dindex.subsystem.name=solr6
-        -Dalfresco.host=localhost
-        -Dalfresco.port=8080
-        -Dalfresco.context=alfresco
-        -Dalfresco.protocol=http"
-    ports:
-      - "8080:8080"
-    depends_on:
-      - postgres-main
-      - solr6
-    networks:
-      - spring
-      - postgres-main
-    volumes:
-      - ./keystore:/opt/alfresco-search-services/solrhome/alfresco/keystore
-      - ./config/alfresco-global.properties:/usr/local/tomcat/shared/classes/alfresco-global.properties
-      - ./config/solrcore.properties:/usr/local/tomcat/shared/classes/solrcore.properties
-  solr6:
-    container_name: solr6
-    image: alfresco/alfresco-search-services:2.0.11
-    environment:
-      SOLR_ALFRESCO_HOST: "alfresco"
-      SOLR_ALFRESCO_PORT: "8080"
-      SOLR_SOLR_HOST: "solr6"
-      SOLR_SOLR_PORT: "8983"
-      SOLR_CREATE_ALFRESCO_DEFAULTS: "alfresco,archive"
-    ports:
-      - "8983:8983"
-    networks:
-      - spring
-      - postgres-main
+#  alfresco:
+#    container_name: alfresco
+#    image: alfresco/alfresco-content-repository-community:latest
+#    environment:
+#      JAVA_OPTS: "
+#        -Ddb.driver=org.postgresql.Driver
+#        -Ddb.username=postgres
+#        -Ddb.password=root
+#        -Ddb.url=jdbc:postgresql://postgres-main/alfresco
+#        -Dsolr.host=solr6
+#        -Dsolr.port=8983
+#        -Dsolr.secureComms=none
+#        -Dsolr.base.url=/solr
+#        -Dindex.subsystem.name=solr6
+#        -Dalfresco.host=localhost
+#        -Dalfresco.port=8080
+#        -Dalfresco.context=alfresco
+#        -Dalfresco.protocol=http"
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - postgres-main
+#      - solr6
+#    networks:
+#      - spring
+#      - postgres-main
+#    volumes:
+#      - ./keystore:/opt/alfresco-search-services/solrhome/alfresco/keystore
+#      - ./config/alfresco-global.properties:/usr/local/tomcat/shared/classes/alfresco-global.properties
+#      - ./config/solrcore.properties:/usr/local/tomcat/shared/classes/solrcore.properties
+#  solr6:
+#    container_name: solr6
+#    image: alfresco/alfresco-search-services:2.0.11
+#    environment:
+#      SOLR_ALFRESCO_HOST: "alfresco"
+#      SOLR_ALFRESCO_PORT: "8080"
+#      SOLR_SOLR_HOST: "solr6"
+#      SOLR_SOLR_PORT: "8983"
+#      SOLR_CREATE_ALFRESCO_DEFAULTS: "alfresco,archive"
+#    ports:
+#      - "8983:8983"
+#    networks:
+#      - spring
+#      - postgres-main
 
 networks:
     postgres-main:
@@ -172,10 +172,10 @@ networks:
 volumes:
     postgres:
     pgadmin:
-    alfresco-data:
-      driver: local
-    solr-data:
-      driver: local
+#    alfresco-data:
+#      driver: local
+#    solr-data:
+#      driver: local
 
 ##commands
 #  mvn clean package -P build-docker-image
