--- a/.github/workflows/dockerHub-publish.yml
+++ b/.github/workflows/dockerHub-publish.yml
@@ -9,6 +9,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      db:
+        image: postgres
+        env:
+          POSTGRES_DB: itgura
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: root
+        ports:
+          - 5432:5432
+        options: --health-cmd "pg_isready -U postgres" --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -18,6 +29,23 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '17'
+
+      - name: Wait for PostgreSQL
+        run: |
+          echo "Waiting for PostgreSQL to be ready..."
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            sleep 1
+          done
+
+      - name: Initialize Database
+        run: |
+          psql -v ON_ERROR_STOP=1 --host=localhost --username=postgres --dbname=itgura <<-EOSQL
+            CREATE SCHEMA resource_management;
+            CREATE SCHEMA payment_service;
+            CREATE SCHEMA auth_service;
+          EOSQL
+        env:
+          PGPASSWORD: root
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
