security error fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,7 +114,7 @@ services:
       - ALFRESCO_BASE_URL=http://alfresco:8080
     depends_on:
       - eureka-server
-      - alfresco
+#      - alfresco
     networks:
       - spring
 
