change alfresco to nextCloud

--- a/dms-mediator/dms-mediator-all/src/main/resources/application-docker.properties
+++ b/dms-mediator/dms-mediator-all/src/main/resources/application-docker.properties
@@ -5,15 +5,32 @@ spring.application.name=dms-mediator
 
 spring.servlet.multipart.max-file-size=35MB
 spring.servlet.multipart.max-request-size=35MB
-# Alfresco
-alfresco.base.url=http://alfresco:8080/alfresco
+## Alfresco
+#alfresco.base.url=http://alfresco:8080/alfresco
+#
+#alfresco.username=admin
+#alfresco.password=admin
+#alfresco.uploadUrl=/api/-default-/public/alfresco/versions/1/nodes/-my-/children?fields=id,parentId,name
+#alfresco.downloadUrl=/api/-default-/public/alfresco/versions/1/nodes/{0}/content
+#alfresco.deleteUrl=/api/-default-/public/alfresco/versions/1/nodes/{0}?permanent=true
+#alfresco.uploadRelativePath=/dms
+# Nextcloud
+nextcloud.base.url=http://nextcloud:8080
+nextcloud.username=admin
+nextcloud.password=admin
 
-alfresco.username=admin
-alfresco.password=admin
-alfresco.uploadUrl=/api/-default-/public/alfresco/versions/1/nodes/-my-/children?fields=id,parentId,name
-alfresco.downloadUrl=/api/-default-/public/alfresco/versions/1/nodes/{0}/content
-alfresco.deleteUrl=/api/-default-/public/alfresco/versions/1/nodes/{0}?permanent=true
-alfresco.uploadRelativePath=/dms
+
+# Upload URL Template
+nextcloud.uploadUrl=/remote.php/dav/files/{username}/{path}
+
+# Download URL Template
+nextcloud.downloadUrl=/remote.php/dav/files/{username}/{path}/{filename}
+
+# Delete URL Template
+nextcloud.deleteUrl=/remote.php/dav/files/{username}/{path}/{filename}
+
+# Relative Path for Uploads
+nextcloud.uploadRelativePath=/dms
 
 #alfresco.base.url=http://192.168.1.87:8080/alfresco
 
