--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,14 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DB: itgura
       PGDATA: /data/postgres
+
+
     volumes:
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
       - postgres:/data/postgres
     networks:
       - postgres-main
+      - nextcloud-network
     restart: unless-stopped
 
   pgadmin:
@@ -111,71 +115,110 @@ services:
       - SPRING_PROFILES_ACTIVE=docker
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=http://eureka-server:8761/eureka
       - EUREKA_INSTANCE_HOSTNAME=dms-mediator
-      - ALFRESCO_BASE_URL=http://alfresco:8080
+      - NEXTCLOUD_BASE_URL=http://nextcloud:8080
     depends_on:
       - eureka-server
-#      - alfresco
+      - nextcloud
+      - postgres-main
+
     networks:
       - spring
+      - nextcloud-network
+
+  nextcloud:
+    image: nextcloud:latest
+    container_name: nextcloud
+    ports:
+      - "8080:80"
+    volumes:
+      - nextcloud_data:/var/www/html
+    environment:
+      - POSTGRES_DB=alfresco
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_HOST=postgres-main
+    depends_on:
+      - postgres-main
+    networks:
+      - spring
+      - nextcloud-network
 
 #  alfresco:
-#    container_name: alfresco
-#    image: alfresco/alfresco-content-repository-community:latest
+#    image: docker.io/alfresco/alfresco-content-repository-community:23.2.1
+#    mem_limit: 1900m
 #    environment:
-#      JAVA_OPTS: "
+#      JAVA_TOOL_OPTIONS: >-
+#        -Dencryption.keystore.type=JCEKS
+#        -Dencryption.cipherAlgorithm=DESede/CBC/PKCS5Padding
+#        -Dencryption.keyAlgorithm=DESede
+#        -Dencryption.keystore.location=/usr/local/tomcat/shared/classes/alfresco/extension/keystore/keystore
+#        -Dmetadata-keystore.password=mp6yc0UD9e
+#        -Dmetadata-keystore.aliases=metadata
+#        -Dmetadata-keystore.metadata.password=oKIWzVdEdA
+#        -Dmetadata-keystore.metadata.algorithm=DESede
+#      JAVA_OPTS: >-
 #        -Ddb.driver=org.postgresql.Driver
 #        -Ddb.username=postgres
 #        -Ddb.password=root
-#        -Ddb.url=jdbc:postgresql://postgres-main/alfresco
-#        -Dsolr.host=solr6
-#        -Dsolr.port=8983
-#        -Dsolr.secureComms=none
-#        -Dsolr.base.url=/solr
-#        -Dindex.subsystem.name=solr6
+#        -Ddb.url=jdbc:postgresql://postgres-main:5432/alfresco
+#        -Dshare.host=localhost
+#        -Dshare.port=8085
+##        -Dcsrf.filter.enabled=false
+##        -Ddeployment.method=DOCKER_COMPOSE
+#
+#    depends_on:
+#      - postgres-main
+#    ports:
+#      - "8080:8080"
+#    networks:
+#      - alfresco-network
+#      - postgres-main
+#
+##  postgres:
+##    image: postgres:14.4
+##    mem_limit: 512m
+##    environment:
+##      - POSTGRES_PASSWORD=alfresco
+##      - POSTGRES_USER=alfresco
+##      - POSTGRES_DB=alfresco
+##    ports:
+##      - "5433:5432"
+##    networks:
+##      - alfresco-network
+##    volumes:
+##      - alfresco_data:/var/lib/postgresql/data
+#
+#  share:
+#    image: docker.io/alfresco/alfresco-share:23.2.2
+#    mem_limit: 1g
+#    environment:
+#      REPO_HOST: "alfresco"
+#      REPO_PORT: "8080"
+#      JAVA_OPTS: >-
 #        -Dalfresco.host=localhost
 #        -Dalfresco.port=8080
 #        -Dalfresco.context=alfresco
-#        -Dalfresco.protocol=http"
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - postgres-main
-#      - solr6
+#        -Dalfresco.protocol=http
 #    networks:
-#      - spring
-#      - postgres-main
-#    volumes:
-#      - ./keystore:/opt/alfresco-search-services/solrhome/alfresco/keystore
-#      - ./config/alfresco-global.properties:/usr/local/tomcat/shared/classes/alfresco-global.properties
-#      - ./config/solrcore.properties:/usr/local/tomcat/shared/classes/solrcore.properties
-#  solr6:
-#    container_name: solr6
-#    image: alfresco/alfresco-search-services:2.0.11
-#    environment:
-#      SOLR_ALFRESCO_HOST: "alfresco"
-#      SOLR_ALFRESCO_PORT: "8080"
-#      SOLR_SOLR_HOST: "solr6"
-#      SOLR_SOLR_PORT: "8983"
-#      SOLR_CREATE_ALFRESCO_DEFAULTS: "alfresco,archive"
+#        - alfresco-network
 #    ports:
-#      - "8983:8983"
-#    networks:
-#      - spring
-#      - postgres-main
+#        - "8085:8080"
 
 networks:
     postgres-main:
         driver: bridge
     spring:
         driver: bridge
+    nextcloud-network:
+      driver: bridge
 
 volumes:
     postgres:
     pgadmin:
-#    alfresco-data:
-#      driver: local
-#    solr-data:
-#      driver: local
+    nextcloud_data:
+#    alfresco_data:
+
+
 
 ##commands
 #  mvn clean package -P build-docker-image
