added changeUserRole Method

--- a/lms-gateway/src/main/resources/application.properties
+++ b/lms-gateway/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=lms-gateway
 server.port=8081
 server.servlet.context-path=/
 
+logging.level.org.springframework.cloud.gateway.handler.RoutePredicateHandlerMapping=DEBUG
+
 #swagger
 #springdoc.enable-native-support=true
 #springdoc.api-docs.enabled=true
