getVideoMaterialSignedUrl method implimentation

--- a/resource-management/resource-management-all/src/main/resources/application.properties
+++ b/resource-management/resource-management-all/src/main/resources/application.properties
@@ -4,3 +4,12 @@ logging.level.org.springframework.core.env=DEBUG
 spring.profiles.active=dev
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
 logging.level.org.springframework.security=DEBUG
+
+#CloudFront
+#cloudfront.domain=https://yourdistribution.cloudfront.net
+#cloudfront.keyPairId=YOUR_KEY_PAIR_ID
+#cloudfront.privateKeyPath=classpath:private-key.pem  # Ensure the private key file is in the classpath
+
+cloudfront.domain=https://yourdistribution.cloudfront.net
+cloudfront.keyPairId=YOUR_KEY_PAIR_ID
+cloudfront.privateKeyPath=classpath:private-key.pem  # Ensure the private key file is in the classpath
