security bug fix, changeUserRole Admin Controller implemented

--- a/lms-gateway/src/main/resources/application.properties
+++ b/lms-gateway/src/main/resources/application.properties
@@ -68,6 +68,19 @@ spring.cloud.gateway.routes[2].filters[0].name=RewritePath
 spring.cloud.gateway.routes[2].filters[0].args.regexp=/auth-service/(?<remaining>.*)
 spring.cloud.gateway.routes[2].filters[0].args.replacement=/api/v1/auth-service/${remaining}
 
+#auth-service-protected
+spring.cloud.gateway.routes[5].id=auth-service-protected
+spring.cloud.gateway.routes[5].uri=lb://auth-service
+spring.cloud.gateway.routes[5].predicates[0].name=Path
+spring.cloud.gateway.routes[5].predicates[0].args.pattern=/auth-service-protected/**
+
+
+spring.cloud.gateway.routes[5].filters[0].name=RewritePath
+spring.cloud.gateway.routes[5].filters[0].args.regexp=/auth-service-protected/(?<remaining>.*)
+spring.cloud.gateway.routes[5].filters[0].args.replacement=/api/v1/auth-service-protected/${remaining}
+
+
+
 #payment-service
 spring.cloud.gateway.routes[3].id=payment-service
 spring.cloud.gateway.routes[3].uri=lb://payment-service
